Fix: grid layout spacing issues, conflicts resolved

--- a/src/components/Profile/Profile.module.css
+++ b/src/components/Profile/Profile.module.css
@@ -52,7 +52,7 @@
 
 .searchContainer {
     display: flex;
-    max-width: 1000px;
+    max-width: 1060px;
     justify-content: space-between;
     align-items: center;
     margin-left: auto;
@@ -85,7 +85,7 @@
 
 .itemsContainer {
     margin-top: 30px;
-    max-width: 1000px;
+    max-width: 1060px;
     margin-left: auto;
     margin-right: auto;
     padding-right: 16px;
@@ -100,12 +100,10 @@
 }
 
 .items {
-    display: flex;
-    flex-wrap: wrap;
-    width: fit-content;
-    margin-left: auto;
-    margin-right: auto;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, 230px);
     justify-content: space-between;
+    grid-gap: 20px;
 }
 
 .button {
@@ -164,6 +162,10 @@
         margin-top: 10px;
     }
 
+    .items {
+        grid-template-columns: repeat(auto-fill, 145px);
+        grid-gap: 15px;
+    }
 
     .searchContainer {
         padding-right: 16px;
